--- a/styles.css
+++ b/styles.css
@@ -26,21 +26,29 @@ html {
 	background-image: linear-gradient(var(--primary-gradient));
 }
 
+.hero__logo-container {
+	margin: 2rem auto;
+	max-width: 375px;
+}
+
 .hero__logo {
 	display: block;
+	margin-left: 2rem;
 	width: 8rem;
-	margin: 2rem;
 }
 
 .hero__image {
 	display: block;
 	margin: 0 auto 5rem;
 	width: 100%;
+	max-width: 375px;
 }
 
 .hero__text-content {
-	margin: 0 2rem;
+	margin: 0 auto;
+	padding: 0 2rem;
 	padding-bottom: 6rem;
+	max-width: 450px;
 }
 
 .hero__title {
