--- a/styles.css
+++ b/styles.css
@@ -23,39 +23,50 @@ html {
 }
 
 .hero {
+	display: grid;
+	grid-auto-flow: column;
 	background-image: linear-gradient(var(--primary-gradient));
 }
 
+.hero__primary-content {
+	margin: 0 auto;
+	padding-bottom: 6rem;
+	max-width: 450px;
+	text-align: center;
+}
+
 .hero__logo-container {
-	margin: 2rem auto;
+	margin: 0 auto 2rem;
 	max-width: 375px;
 }
 
 .hero__logo {
 	display: block;
 	margin-left: 2rem;
+	padding-top: 2rem;
 	width: 8rem;
 }
 
 .hero__image {
 	display: block;
+}
+
+.image--mobile {
 	margin: 0 auto 5rem;
 	width: 100%;
 	max-width: 375px;
 }
 
-.hero__text-content {
-	margin: 0 auto;
-	padding: 0 2rem;
-	padding-bottom: 6rem;
-	max-width: 450px;
+.image--desktop {
+	display: none;
+	width: 100%;
+	max-width: 600px;
 }
 
 .hero__title {
 	margin: 0 0 1.5rem;
 	font-size: 3em;
 	font-weight: 600;
-	text-align: center;
 	text-transform: uppercase;
 	letter-spacing: 0.2em;
 	line-height: 1.075;
@@ -63,12 +74,12 @@ html {
 }
 
 .hero__description {
-	margin: 0 0 2.5rem;
-	text-align: center;
+	margin: 0 2rem 2.5rem;
 	line-height: 1.6;
 }
 
 .form {
+	margin: 0 2rem;
 	position: relative;
 	height: 3.5rem;
 }
@@ -111,6 +122,25 @@ html {
 	background-image: linear-gradient(var(--secondary-gradient));
 	box-shadow: 0 1rem 2rem -0.5rem var(--desaturated-red);
 	cursor: pointer;
+	z-index: 1;
+	overflow: hidden;
+}
+
+.button:hover::after {
+	opacity: 1;
+}
+
+.button::after {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: hsl(0, 80%, 86%);
+	opacity: 0;
+	transition: opacity var(--default-transition);
+	z-index: -1;
 }
 
 .button__icon {
@@ -137,4 +167,66 @@ html {
 .light-font {
 	color: var(--desaturated-red);
 	font-weight: 300;
+}
+
+@media (min-width: 860px) {
+	html {
+		font-size: 16px;
+	}
+
+	.hero__primary-content {
+		max-width: 580px;
+	}
+
+	.hero__description {
+		margin: 0 0 2.5rem;
+	}
+
+	.form {
+		margin: 0;
+	}
+
+	.form__error-icon {
+		right: 6.5rem;
+	}
+
+	.button {
+		width: 5.5rem;
+	}
+}
+
+@media (min-width: 1050px) {
+	.hero {
+		margin: 0 auto;
+		max-width: 1440px;
+		max-height: 800px;
+	}
+
+	.hero__primary-content {
+		padding: 0 20%;
+		max-width: 830px;
+		text-align: left;
+		background-image: url('./assets/images/bg-pattern-desktop.svg');
+		background-size: cover;
+		background-position: center;
+		background-repeat: no-repeat;
+	}
+
+	.hero__logo-container {
+		max-width: 100%;
+		margin-bottom: 25%;
+	}
+
+	.hero__logo {
+		margin: 0;
+		width: initial;
+	}
+
+	.image--mobile {
+		display: none;
+	}
+
+	.image--desktop {
+		display: block;
+	}
 }
